ColinFay published a site update

--- a/deploy-golem.html
+++ b/deploy-golem.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-23" />
+<meta name="date" content="2020-11-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -537,7 +537,7 @@ If the app records data, there are backups for these data.</p></li>
 <h3><span class="header-section-number">13.2.1</span> Install on your machine</h3>
 <p>A <code>{shiny}</code> application built with <code>{golem}</code> <span class="citation">(Fay et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> is <strong>by definition</strong> an R package.
 This <code>{shiny}</code> App as a Package is also helpful when it comes to deploying your application: packages are designed to be shareable pieces of R code.</p>
-<p>Before sending it to a remote server or sharing it to the world, the first step is testing if the package can be installed on your own computer.
+<p>Before sending it to a remote server or sharing it to the world, <strong>the first step is testing if the package can be installed on your own computer</strong>.
 To do that, when you are in the project corresponding to the golem you built, you can call <code>remotes::install_local()</code> to install the application on your computer.
 Of course, if you are somewhere else on your machine, you can call <code>remotes::install_local("path/to/app")</code>.
 If you are using the RStudio IDE, you can also click on the <code>Build</code> tab, then click on the <code>Install and Restart</code> button.</p>
@@ -581,7 +581,7 @@ But good news: as you have been following the best practices from this book, you
 <div id="deploying-apps-with-golem" class="section level2">
 <h2><span class="header-section-number">13.3</span> Deploying Apps with <code>{golem}</code></h2>
 <p>The other way to make your application available to others is by sending it to a remote server that can serve <code>{shiny}</code> applications.
-In other words, instead of having to install the application on their machines, they can crack open a web browser and navigate to the URL where the application is deployed.
+In other words, instead of having to install the application on their machines, <strong>they can crack open a web browser and navigate to the URL where the application is deployed</strong>.
 Deploying to a server is the solution of choice when you want to make your application available to a wide public: on a server, visitors do not have to have R installed on their computer, they do not have to install a package or launch it, they can just browse the application like any other web application.
 This solution is also a common choice in companies that have strict security requirements: the IT team might not be willing to let everyone install software on their machine, and sharing an application on a server allows them more control over who can access the application.
 For example, deploying on a server allows to use proxy, and to filter by IP: then, only a subset of people can have access to the application.</p>
