--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-23" />
+<meta name="date" content="2020-11-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -487,7 +487,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Engineering Production-Grade Shiny Apps</h1>
 <p class="author"><em>Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard</em></p>
-<p class="date"><em>2020-11-23</em></p>
+<p class="date"><em>2020-11-24</em></p>
 </div>
 <div id="introduction" class="section level1 unnumbered">
 <h1>Introduction</h1>
@@ -594,7 +594,7 @@ Whatever the challenge, he remains reliable, constructive and efficient when it 
 <div id="want-to-help" class="section level2 unnumbered">
 <h2>Want to help?</h2>
 <p>Any feedback on the book is very welcome.
-Feel free to <a href="https://github.com/ThinkR-open/building-shiny-apps-workflow/issues">open an issue</a> if you spot a typo, or if you have any idea for enhancing some parts of this book.</p>
+Feel free to <a href="https://github.com/ThinkR-open/building-shiny-apps-workflow/issues">open an issue</a>, or to make a Pull Request if you spot a typo.</p>
 </div>
 <div id="other-resources" class="section level2 unnumbered">
 <h2>Other resources</h2>
@@ -625,7 +625,7 @@ You can also find more resources in the bibliography.</p>
 But good news!
 <strong>A large portion of this book is about the methodology, and not purely the technology</strong>, so even if some of the packages and code sections used in this book can (and will) become obsolete, a significant part of what is described in this book will still be relevant.</p>
 <p>When reading this book, remember that they are a “snapshot” of various technologies and packages, which might some day become out of date, have breaking changes, or even disappear.
-The last revision to the pages you’re reading now has been done on the 2020-11-23.
+The last revision to the pages you’re reading now has been done on the 2020-11-24.
 We will <strong>try to update the online version whenever changes are made to the packages used in this book</strong>, so feel free to browse the online version<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a> for up-to-date information.</p>
 </div>
 <div id="software-information-and-conventions" class="section level2 unnumbered">
@@ -646,7 +646,8 @@ In other words, the following code:</p>
 <h3>Special thank</h3>
 <p>We want to thank ThinkR for freeing us time to write this book, and for always being supportive all along the project.</p>
 <p>Colin wants to personally thank <a href="https://twitter.com/chrisderv">Christophe Dervieux</a> for all his help, be it for this book or any other project, and for being such an awesome person.
-He also want to thank <a href="https://r-podcast.org/">Eric Nantz</a> for taking the time to write the forewords, for being one of the first <code>{golem}</code> adopter, and for always being enthusiastic about all thing gravitating around the <code>golemverse</code>.</p>
+He also want to thank <a href="https://r-podcast.org/">Eric Nantz</a> for taking the time to write the forewords, for being one of the first <code>{golem}</code> adopter, and for always being enthusiastic about all thing gravitating around the <code>golemverse</code>.
+A big thanks also to <a href="https://divadnojnarg.github.io/">David Granjon</a> for his precious feedback on this book.</p>
 </div>
 <div id="contributors-to-this-book" class="section level3 unnumbered">
 <h3>Contributors to this book</h3>
