--- a/planning.html
+++ b/planning.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-23" />
+<meta name="date" content="2020-11-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -498,17 +498,16 @@ French proverb</p>
 <p>A common thing you will hear about <code>{shiny}</code> is that it is a good prototyping tool.
 This can not be denied.
 Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what it needs to build applications in other languages.
-With <code>{shiny}</code>, you can build a “it works on my machine” web application in a couple of hours, and show it to your team, your boss, your investors…
-Thanks to the way <code>{shiny}</code> was designed, you do not have to care about websockets, ports, HTML, JavaScript libraries, and all the things that are elegantly bundled into <code>{shiny}</code>.</p>
+With <code>{shiny}</code>, you can build a “it works on my machine” web application in a couple of hours, and show it to your team, your boss, your investors… Thanks to the way <code>{shiny}</code> was designed, you do not have to care about websockets, ports, HTML, JavaScript libraries, and all the things that are elegantly bundled into <code>{shiny}</code>.</p>
 <p>Hence, you can have a quick, hacky application that will work on your machine, and that, very rapidly.
 But that is not the way you should start.
 Indeed, starting with hacky foundations will lead to two possibilities:</p>
 <ul>
-<li>You will have to rewrite everything from scratch to have a robust application for production.</li>
-<li>If you do not want to rewrite all the code, you will get stuck with a legacy codebase for the application, built on top of hacky functions, and sent to production using hacky solutions.</li>
+<li>You will have to <strong>rewrite everything from scratch</strong> to have a robust application for production.</li>
+<li>If you do not want to rewrite all the code, you will <strong>get stuck with a legacy codebase</strong> for the application, built on top of hacky functions, and sent to production using hacky solutions.</li>
 </ul>
-<p>Either way, that is a heavy technical debt.</p>
-<p><code>{shiny}</code> is a good tool for prototyping, but there is no harm in starting your application on solid ground, even for a prototype: the sooner you start with a robust framework the better, and the longer you wait the harder it gets to convert your application to a production-ready one.
+<p>Either way, that is a <strong>heavy technical debt</strong>.</p>
+<p><code>{shiny}</code> is a good tool for prototyping, but there is no harm in starting your application on solid ground, even for a prototype: <strong>the sooner you start with a robust framework the better, and the longer you wait the harder it gets to convert your application to a production-ready one</strong>.
 The larger the codebase, the harder it is to untangle everything and make it work.</p>
 <p>In this book, we will present a framework called <code>{golem}</code>, which is a toolbox for building production-grade <code>{shiny}</code> applications.
 Even if <code>{golem}</code> is focused on production, there is no reason not to use it for your proof of concepts: starting a new <code>{golem}</code> project is relatively straightforward, and even if you do not use the advanced features, you can use it for very small apps.
@@ -531,8 +530,8 @@ That way, you are getting ready for complexity, and if, one day, you need to tur
 <p>The story behind this principle is supposed to be that Kelly Johnson, lead engineer at the Lockheed Skunk Works, gave his workers a set of very common tools and said that every airplane should be repairable with these tools, and these tools only, so that repairing an aircraft should be possible for any average engineer.</p>
 <p>This should be a principle to keep in mind when building application.
 Indeed, large scale <code>{shiny}</code> projects can lead to many people working on the code base, for a long period of time.
-A large team means a variety of skills, with some common ground in <code>{shiny}</code> development, but potentially various levels when it comes to R, web development, or production engineering.
-When choosing how and what to implement, try to make a rule to go for the simplest solution,<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a> <em>i.e.</em> the one that any common <code>{shiny}</code> Developer would be able to understand and maintain.
+<strong>A large team means a variety of skills</strong>, with some common ground in <code>{shiny}</code> development, but potentially various levels when it comes to R, web development, or production engineering.
+When choosing how and what to implement, <strong>try to make a rule to go for the simplest solution</strong>,<a href="#fn16" class="footnote-ref" id="fnref16"><sup>16</sup></a> <em>i.e.</em> the one that any common <code>{shiny}</code> Developer would be able to understand and maintain.
 If you go for an exotic solution or a complex technology, be sure that you are doing it for a good reason: unknown or hard to grasp technology reduces the chance of finding someone that will be able to maintain that piece of code in the future, and lower the smoothness of collaboration, as “<em>Code you can easily comprehend elevates absolutely everyone on your team, no matter their tenure or experience level</em>” <span class="citation">(Lemaire <a href="#ref-lemaire2020" role="doc-biblioref">2020</a>)</span>.</p>
 </div>
 </div>
@@ -541,33 +540,32 @@ If you go for an exotic solution or a complex technology, be sure that you are d
 <p>Working as a team, whatever the coding project, requires adequate tools, discipline and organization.
 Complex <code>{shiny}</code> Apps usually imply that several people will work on the application.
 For example, at <a href="//rtask.thinkr.fr">ThinkR</a>, 3 to 4 people usually work in parallel on the same application, but there might be more people involved on larger projects.
-The choice of tools and how the team is structured is crucial for a successful application.</p>
+<strong>The choice of tools and how the team is structured is crucial for a successful application</strong>.</p>
 <div id="from-the-tools-point-of-view" class="section level3">
 <h3><span class="header-section-number">2.2.1</span> From the tools point of view</h3>
 <div id="a.-version-control-test-all-the-things" class="section level4 unnumbered">
 <h4>A. Version Control &amp; Test all the things</h4>
 <p>To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected.<a href="#fn17" class="footnote-ref" id="fnref17"><sup>17</sup></a>
 When you are working on a complex application, chances are that you will be working on it for a significant period of time, meaning that you will write code, modify it, use it, go back to it after a few weeks, change some other things, and probably break things.
-Breaking things is a natural process of software engineering, notably when working on a piece of code during a long period.
-Remember the last chapter where we defined that complex applications are too large to be understood fully?
+<strong>Breaking things is a natural process of software engineering, notably when working on a piece of code during a long period</strong>. Remember the last chapter where we defined that complex applications are too large to be understood fully?
 Adding code that breaks the codebase will happen with complex app, so the sooner you take measure to solve these changes, the better.</p>
 <p>As you can not prevent code to break, you should at least get the tooling to:</p>
 <ul>
-<li>Be informed that the codebase is broken: this is the role of tests combined with CI</li>
-<li>Be able to identify changes between versions, and potentially, get back in time to a previous code base: this is the role of version control</li>
+<li><strong>Be informed that the codebase is broken</strong>: this is the role of tests combined with CI</li>
+<li><strong>Be able to identify changes between versions, and potentially, get back in time to a previous code base</strong>: this is the role of version control</li>
 </ul>
 <p>We will go deeper into testing and version control in <a href="step-secure.html#step-secure">chapter 14</a>.</p>
 </div>
 <div id="b.-small-is-beautiful" class="section level4 unnumbered">
 <h4>B. Small is beautiful</h4>
 <p>Building an application with multiple small and independent pieces will lighten your development process and your mental load.
-Previous chapter introduced the notion of complexity in size, where the app grows so large that it is very hard to have a good grasp of it.
-A large code base implies that the safe way to work is to split the app into pieces.<br />
+The previous chapter introduced the notion of complexity in size, where the app grows so large that it is very hard to have a good grasp of it.
+<strong>A large code base implies that the safe way to work is to split the app into pieces</strong>.<br />
 Splitting a <code>{shiny}</code> project is made possible by following two methods:</p>
 <ul>
-<li><p>Extract your core “non-reactive” functions, that we will also call the “business logic”, and include them in external files, so that you can work on these outside of the app.
+<li><p><strong>Extract your core “non-reactive” functions, that we will also call the “business logic”, and include them in external files</strong>, so that you can work on these outside of the app.
 Working on independent functions to implement features will prevent you to relaunch the whole application every time you need to add something new.</p></li>
-<li><p>Split your app into <code>{shiny}</code> Modules, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.</p></li>
+<li><p><strong>Split your app into <code>{shiny}</code> modules</strong>, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.</p></li>
 </ul>
 <p>Here is for example a representation of a <code>{shiny}</code> application with modules and sub-modules.
 You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a shiny application with module can be organized and splitted into smaller pieces that are all related to each other in a tree form.</p>
@@ -587,7 +585,7 @@ FIGURE 2.1: Representation of a <code>{shiny}</code> application with its module
 Note that this is how a project should be organized in a perfect world: in practice, a lot of <code>{shiny}</code> projects are managed by one developer who is in charge of managing the project, interacting with the client, and building the whole codebase.</p>
 <div id="a.-a-person-in-charge" class="section level4 unnumbered">
 <h4>A. A person in charge</h4>
-<p>The person in charge of the development will have an complete view of the entire project and manage the team so that all developers implement features that fit together.</p>
+<p>The person in charge of the development will have <strong>a complete view of the entire project and manage the team so that all developers implement features that fit together</strong>.</p>
 <p>With complex applications, it can be hard to have the complete understanding of what the entire app is doing.
 Most of the time, it is not necessary for all developers to have this complete picture.
 By defining one person in charge, this “manager” will have to get the whole picture: what each part of the software is doing, how to make everything work together, avoid development conflicts, and of course check that, at the end of the day, the results returned by the built application are the correct ones.</p>
@@ -602,7 +600,7 @@ These interfaces can also be used to set continuous integration.</p>
 </div>
 <div id="b.-developers" class="section level4 unnumbered">
 <h4>B. Developers</h4>
-<p>Developers will focus on small features.
+<p><strong>Developers will focus on small features</strong>.
 If the person in charge has correctly separated the work between developers of the team, they will be focusing on one or more parts of the application, but do not need to know every single bit of what the application is doing.
 In a perfect world, the application is split in various <code>{shiny}</code> Modules, one module equals one file and each member of the team will be assigned to the development of one or more modules.</p>
 <p>It is simpler to work in this context where one developer is assigned to one module, although we know that in reality it may be a little more complex, and several members of the team might go back and forth working on a common module.
