--- a/references.html
+++ b/references.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-23" />
+<meta name="date" content="2020-11-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -685,7 +685,7 @@ https://daattali.com/shiny/shinyalert-demo/</a>.</p>
 <p>Henry, Lionel, and Hadley Wickham. 2020. <em>Purrr: Functional Programming Tools</em>.</p>
 </div>
 <div>
-<p>Hester, Jim. 2020a. <em>Bench: High Precision Timing of R Expressions</em>. <a href="https://github.com/r-lib/bench">https://github.com/r-lib/bench</a>.</p>
+<p>Hester, Jim. 2020a. <em>Bench: High Precision Timing of R Expressions</em>.</p>
 </div>
 <div>
 <p>———. 2020b. <em>Covr: Test Coverage for Packages</em>.</p>
@@ -754,7 +754,7 @@ https://daattali.com/shiny/shinyalert-demo/</a>.</p>
 <p>———. 2020. <em>Jsonlite: A Simple and Robust Json Parser and Generator for R</em>.</p>
 </div>
 <div>
-<p>Ooms, Jeroen, and Jim Hester. 2020. <em>Spelling: Tools for Spell Checking in R</em>.</p>
+<p>Ooms, Jeroen, and Jim Hester. 2019. <em>Spelling: Tools for Spell Checking in R</em>. <a href="https://github.com/ropensci/spelling#readme">https://github.com/ropensci/spelling#readme</a>.</p>
 </div>
 <div>
 <p>Pebesma, Edzer. 2018. “Simple Features for R: Standardized Support for Spatial Vector Data.” <em>The R Journal</em> 10 (1): 439–46. <a href="https://doi.org/10.32614/RJ-2018-009">https://doi.org/10.32614/RJ-2018-009</a>.</p>
@@ -905,6 +905,20 @@ https://daattali.com/shiny/shinyalert-demo/</a>.</p>
 </div>
 </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
