--- a/workflow.html
+++ b/workflow.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-23" />
+<meta name="date" content="2020-11-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -518,7 +518,7 @@ The main goal of this step is to spend time thinking about the application while
 We have all been in a situation during a project where we tell ourselves: “I wish I had known this sooner”: working on designing the application before building it helps lowering the chances for this kind of bad surprises.</p>
 <p>This first part of the workflow will span over three chapters:</p>
 <ul>
-<li><p>UX Matters (@ref(#matters)), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application.
+<li><p>UX Matters (<a href="matters.html#matters">6</a>), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application.
 This chapter will cover the importance of simplicity when creating web applications, the danger of trying to implement too much components (aka “feature creep”), and finally we will introduce some general rules about Web Accessibility.
 These topics are vast topics, and a lot of literature and online resources exists for all these subjects: further readings and resources are linked inside each section.</p></li>
 <li><p>Don’t rush into coding underlines why “coding first” might not be the best strategy when it comes to building a production application.
@@ -540,15 +540,15 @@ This “UI first” approach will be made possible for <code>{shiny}</code> with
 For this point, you can use what we call a “Rmd-first” approach, by combining R functions with the writing of Vignettes that describes the internal of the application.
 This part of the workflow will be developed in two chapters:</p>
 <ul>
-<li><p>The <em>Setting up for success with <code>{golem}</code></em> chapter (#@ref(#settingupsuccess)) will cover the basics of getting started with the <code>{golem}</code> package so that you can start your prototyped application with solid foundation.</p></li>
-<li><p>The <em>Building an “ipsum-app”</em> chapter (#@ref(#stepprotopype)) will cover the importance of prototyping when it comes to building applications, then present <code>{shinipsum}</code> and <code>{fakir}</code>, and finally will introduce how you can use the “Rmd First” methodology to prototype your application back-end.</p></li>
+<li><p>The <em>Setting up for success with <code>{golem}</code></em> chapter (<a href="settingupsuccess.html#settingupsuccess">8</a>) will cover the basics of getting started with the <code>{golem}</code> package so that you can start your prototyped application with solid foundation.</p></li>
+<li><p>The <em>Building an “ipsum-app”</em> chapter (<a href="stepprotopype.html#stepprotopype">9</a>) will cover the importance of prototyping when it comes to building applications, then present <code>{shinipsum}</code> and <code>{fakir}</code>, and finally will introduce how you can use the “Rmd First” methodology to prototype your application back-end.</p></li>
 </ul>
 </div>
 <div id="step-3-build" class="section level2">
 <h2><span class="header-section-number">5.3</span> Step 3: Build</h2>
 <p>The <em>Build</em> part is the one where you will combine the business (or back-end) logic with the front-end.
 In this third part, you will work on the core engine of the application, making the business logic work inside the interactive logic of your application.</p>
-<p>This step of the workflow is cover in <em>Building app with <code>{golem}</code></em> (#@ref(#stepbuild)), a chapter that presents the various functions you can use to build your application, <em>i.e</em> the one you will be using to combine your back-end and front-end.</p>
+<p>This step of the workflow is cover in <em>Building app with <code>{golem}</code></em> (<a href="stepbuild.html#stepbuild">10</a>), a chapter that presents the various functions you can use to build your application, <em>i.e</em> the one you will be using to combine your back-end and front-end.</p>
 <p>In this step, we will cover:</p>
 <ul>
 <li>How to handle dependencies in your project, <em>i.e</em> how to use leverage external libraries inside your project</li>
@@ -560,7 +560,7 @@ In this third part, you will work on the core engine of the application, making 
 </div>
 <div id="step-4-strengthen" class="section level2">
 <h2><span class="header-section-number">5.4</span> Step 4: Strengthen</h2>
-<p><em>Strengthening</em> your app is ensuring your application is immortal, in the sense that we defined in chapter (#@ref(#successfulshinyapp)) of this book.</p>
+<p><em>Strengthening</em> your app is ensuring your application is immortal, in the sense that we defined in chapter (<a href="successfulshinyapp.html#successfulshinyapp">1</a>) of this book.</p>
 <p>In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of <code>{shiny}</code> applications.
 Building a solid testing suite is crucial to the success of a project, as it allows a project to be stable on the long run, be it when you will want to add new feature, or refactor existing code:</p>
 <blockquote>
@@ -574,10 +574,10 @@ Building a solid testing suite is crucial to the success of a project, as it all
 </blockquote>
 <p>This step of the workflow will span over two chapters.</p>
 <ul>
-<li><p>The first one, <em>Build yourself a safety net</em> (chapter @ref(#step-secure)), details how to build a testing environment for your <code>{shiny}</code> Application, be it for testing the back-end or the front-end.
+<li><p>The first one, <em>Build yourself a safety net</em> (chapter <a href="step-secure.html#step-secure">11</a>), details how to build a testing environment for your <code>{shiny}</code> Application, be it for testing the back-end or the front-end.
 In this chapter, you will be introduced to <code>{testthat}</code> for testing your application back-end, tools that are more linked to testing the front-end like NodeJS <code>puppeteer</code> module, <code>{shinytest}</code> and <code>{crrry}</code> for testing interactive logic, <code>{shinyloadtest}</code> and <code>{dockerstats}</code> for testing your application load.
 This chapter will also cover <code>{renv}</code> and <code>Docker</code>, two essential tools for developing in a reproducible environment.</p></li>
-<li><p>In the <em>Version Control</em> chapter (#@ref(#version-control)), you will be introduced to <code>git</code> and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions.</p></li>
+<li><p>In the <em>Version Control</em> chapter (<a href="secure.html#version-control">12.1</a>), you will be introduced to <code>git</code> and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions.</p></li>
 </ul>
 </div>
 <div id="step-5-deploy" class="section level2">
