--- a/step-secure.html
+++ b/step-secure.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-24" />
+<meta name="date" content="2020-11-26" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -160,8 +160,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#want-to-help"><i class="fa fa-check"></i>Want to help?</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#other-resources"><i class="fa fa-check"></i>Other resources</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#getting-started-with-shiny"><i class="fa fa-check"></i>Getting started with Shiny</a></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#shiny-into-production"><i class="fa fa-check"></i>Shiny into production</a></li>
+<li><a href="index.html#getting-started-with-shiny">Getting started with <code>{shiny}</code></a></li>
+<li><a href="index.html#shiny-into-production"><code>{shiny}</code> into production</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#disclaimer"><i class="fa fa-check"></i>Disclaimer</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#software-information-and-conventions"><i class="fa fa-check"></i>Software information and conventions</a></li>
@@ -177,8 +177,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li><a href="applications-presentation.html#minifying"><code>{minifying}</code></a></li>
 <li class="chapter" data-level="" data-path="applications-presentation.html"><a href="applications-presentation.html#other-applications"><i class="fa fa-check"></i>Other applications</a></li>
 </ul></li>
-<li class="part"><span><b>I Building Successful Shiny Apps</b></span></li>
-<li class="chapter" data-level="1" data-path="successfulshinyapp.html"><a href="successfulshinyapp.html"><i class="fa fa-check"></i><b>1</b> About Successful Shiny Apps</a><ul>
+<li class="part"><span><b>I Building Successful <code>{shiny}</code> Apps</b></span></li>
+<li class="chapter" data-level="1" data-path="successfulshinyapp.html"><a href="successfulshinyapp.html"><i class="fa fa-check"></i><b>1</b> About Successful <code>{shiny}</code> Apps</a><ul>
 <li class="chapter" data-level="1.1" data-path="successfulshinyapp.html"><a href="successfulshinyapp.html#a-very-short-introduction-to-shiny"><i class="fa fa-check"></i><b>1.1</b> A (very) short introduction to <code>{shiny}</code></a></li>
 <li class="chapter" data-level="1.2" data-path="successfulshinyapp.html"><a href="successfulshinyapp.html#complex-shiny"><i class="fa fa-check"></i><b>1.2</b> What is a Complex <code>{shiny}</code> Application?</a><ul>
 <li class="chapter" data-level="1.2.1" data-path="successfulshinyapp.html"><a href="successfulshinyapp.html#reaching-the-cliff-of-complexity"><i class="fa fa-check"></i><b>1.2.1</b> Reaching the cliff of complexity</a></li>
@@ -885,7 +885,7 @@ We also make sure we give it a name with <code>--name</code>, so that we can cal
 <pre><code># A tibble: 1 x 14
   Container Name  ID    CPUPerc MemUsage MemLimit
   &lt;chr&gt;     &lt;chr&gt; &lt;chr&gt;   &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;   
-1 hexmake   hexm… 4259…    0.05 113.8MiB 6.791GiB
+1 hexmake   hexm… 4f91…    0.06 113.6MiB 6.791GiB
 # … with 8 more variables: MemPerc &lt;dbl&gt;, NetI &lt;chr&gt;,
 #   NetO &lt;chr&gt;, BlockI &lt;chr&gt;, BlockO &lt;chr&gt;,
 #   PIDs &lt;int&gt;, record_time &lt;chr&gt;, extra &lt;chr&gt;</code></pre>
