ColinFay published a site update

--- a/successfulshinyapp.html
+++ b/successfulshinyapp.html
@@ -488,7 +488,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">Chapter 1</span> About Successful <code>{shiny}</code> Apps</h1>
 <div id="a-very-short-introduction-to-shiny" class="section level2">
 <h2><span class="header-section-number">1.1</span> A (very) short introduction to <code>{shiny}</code></h2>
-<p>If you are reading this page, chances are you already know what a <code>{shiny}</code> application (shorten “Shiny app”) is—<strong>a web application that communicates with R, built in R, and working with R</strong>.
+<p>If you are reading this page, chances are you already know what a <code>{shiny}</code> application (sometimes shorten “<code>{shiny}</code> app”) is—<strong>a web application that communicates with R, built in R, and working with R</strong>.
 The beauty of <code>{shiny}</code> <span class="citation">(Chang et al. <a href="#ref-R-shiny" role="doc-biblioref">2020</a>)</span> is that it makes it easy for someone already familiar with R to create a small app in a matter of hours.
 With small and minimal <code>{shiny}</code> apps, no knowledge of HTML, CSS or JavaScript is required, and you do not have to think about technical elements that usually come with web applications—for example, you do not have to think about the port the application is served on: <code>{shiny}</code> picks one for you<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a> .
 Same goes for serving external dependencies: the application comes with its set of CSS and JavaScript dependencies that a common <code>{shiny}</code> developer does not need to worry about.
