ColinFay published a site update

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ margin-right: 1em;
 <p>This book will soon be available in print, published in the <a href="https://www.crcpress.com/go/the-r-series">R Series</a> by Chapman &amp; Hall.</p>
 <div id="motivation" class="section level2 unnumbered">
 <h2>Motivation</h2>
-<p>This book will not <strong>get you started with <code>{shiny}</code></strong>, nor <strong>talk how to work with Shiny once it is sent to production</strong>.
+<p>This book will not <strong>get you started with <code>{shiny}</code></strong>, nor <strong>talk how to work with <code>{shiny}</code> once it is sent to production</strong>.
 What we will be discussing in this book is <strong>the process of building an application that will later be sent to production</strong>.</p>
 <p>Why this topic? Lots of blog posts and books talk about getting started with <code>{shiny}</code> <span class="citation">(Chang et al. <a href="#ref-R-shiny" role="doc-biblioref">2020</a>)</span> or about what to do once your application is ready to be sent to production.
 Very few (if any) talk about this area in-between: how to confidently work with <code>{shiny}</code> once you know the basics, and before you send it to production.</p>
@@ -547,7 +547,7 @@ From the engineering point of view, a production-grade software has real impact 
 <div id="book-structure" class="section level2 unnumbered">
 <h2>Book structure</h2>
 <ul>
-<li><p>Part I (Building Successful <code>{shiny}</code> Apps) gives a <strong>general context about what we mean by “production-grade” and “successful” Shiny Application, and what challenges arise when you are dealing with a large scale application designed for production</strong>.
+<li><p>Part I (Building Successful <code>{shiny}</code> Apps) gives a <strong>general context about what we mean by “production-grade” and “successful” <code>{shiny}</code> Application, and what challenges arise when you are dealing with a large scale application designed for production</strong>.
 In this part, we will define what we mean by “Successful”, stress the importance of project management, develop how to structure your project for production, and introduce the <code>{golem}</code> <span class="citation">(Fay et al. <a href="#ref-R-golem" role="doc-biblioref">2020</a>)</span> package.
 We will finally briefly introduce to our development workflow: a workflow that will be explored in part 2 to 6.</p></li>
 <li><p>Part II to IV <strong>explore the workflow for building successful applications</strong>.<br />
