ColinFay published a site update

--- a/deploy-golem.html
+++ b/deploy-golem.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-27" />
+<meta name="date" content="2021-02-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -719,7 +719,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["engineering-production-grade-shiny-apps.pdf"],
+"download": null,
 "toc": {
 "collapse": "section"
 }
