--- a/references.html
+++ b/references.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-27" />
+<meta name="date" content="2021-02-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -544,7 +544,7 @@ https://daattali.com/shiny/shinyalert-demo/</a>.</p>
 <p>Cheng, Joe, and Winston Chang. 2020. <em>Httpuv: HTTP and Websocket Server Library</em>. <a href="https://github.com/rstudio/httpuv">https://github.com/rstudio/httpuv</a>.</p>
 </div>
 <div>
-<p>Cheng, Joe, Carson Sievert, Winston Chang, Yihui Xie, and Jeff Allen. 2020. <em>Htmltools: Tools for Html</em>. <a href="https://github.com/rstudio/htmltools">https://github.com/rstudio/htmltools</a>.</p>
+<p>Cheng, Joe, Carson Sievert, Winston Chang, Yihui Xie, and Jeff Allen. 2021. <em>Htmltools: Tools for Html</em>. <a href="https://github.com/rstudio/htmltools">https://github.com/rstudio/htmltools</a>.</p>
 </div>
 <div>
 <p>Christian, Brian, and Tom Griffiths. 2016. <em>Algorithms to Live by : The Computer Science of Human Decisions</em>. Henry Holt.</p>
@@ -1070,7 +1070,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["engineering-production-grade-shiny-apps.pdf"],
+"download": null,
 "toc": {
 "collapse": "section"
 }
