--- a/when-optimize.html
+++ b/when-optimize.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-27" />
+<meta name="date" content="2021-02-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -592,11 +592,11 @@ Also, are the extra hours/days spent rewriting a working code-base worth the spe
 <pre><code># A tibble: 2 x 6
   expression    min median `itr/sec` mem_alloc `gc/sec`
   &lt;bch:expr&gt; &lt;bch:&gt; &lt;bch:&gt;     &lt;dbl&gt; &lt;bch:byt&gt;    &lt;dbl&gt;
-1 cpp         250µs  269µs     2703.     784KB     10.9
-2 native      597µs  645µs     1546.        0B      0  </code></pre>
+1 cpp         200µs  261µs     2860.     784KB     14.4
+2 native      448µs  599µs     1680.        0B      0  </code></pre>
 <p>(Note: we will come back to <code>bench::mark</code> later)</p>
 <p>Though, how much time gain is worth being sure you will get someone in your team to take over the maintenance if needed?
-In other words, given that (in our example), we are gaining around -3.760110^{-4} on the execution time of our function, is it worth switching to C++?
+In other words, given that (in our example), we are gaining around -3.38710^{-4} on the execution time of our function, is it worth switching to C++?
 Using external languages or complex data structures implies that from the start, you will need to think about who and how your code base will be maintained over the years.
 Chances are that if you plan on using a <code>{shiny}</code> application during a span of several years, various R developers will be working on the project, and including C++ code inside your application means that these future developer will either be required to know C++, or they will not be able to maintain this piece of code.</p>
 <p>So, to sum up, there are three ways to optimize your application &amp; R code, and the bad news is that you can not optimize for all of them:</p>
@@ -792,8 +792,8 @@ Note that by default, the <code>mark()</code> function compares the output of ea
 <pre><code># A tibble: 2 x 6
   expression    min median `itr/sec` mem_alloc `gc/sec`
   &lt;bch:expr&gt; &lt;bch:&gt; &lt;bch:&gt;     &lt;dbl&gt; &lt;bch:byt&gt;    &lt;dbl&gt;
-1 for_loop   65.4µs 66.5µs    14872.    32.4KB        0
-2 vectorized  3.6µs  4.1µs   141594.    11.8KB        0</code></pre>
+1 for_loop   53.1µs   66µs    15442.    32.4KB        0
+2 vectorized  3.2µs  3.9µs   149906.    11.8KB        0</code></pre>
 <p>Here, we have an empiric evidence that one code is faster than the other: by benchmarking the speed of our code, we are able to determine which function is the fastest.</p>
 <p>If you want a graphical analysis, <code>{bench}</code> comes with an <code>autoplot</code> method for <code>{ggplot2}</code> <span class="citation">(Wickham, Chang, et al. <a href="#ref-R-ggplot2" role="doc-biblioref">2020</a>)</span>:</p>
 
@@ -1143,7 +1143,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["engineering-production-grade-shiny-apps.pdf"],
+"download": null,
 "toc": {
 "collapse": "section"
 }
