--- a/step-secure.html
+++ b/step-secure.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard" />
 
 
-<meta name="date" content="2020-11-27" />
+<meta name="date" content="2021-02-04" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -885,7 +885,7 @@ We also make sure we give it a name with <code>--name</code>, so that we can cal
 <pre><code># A tibble: 1 x 14
   Container Name  ID    CPUPerc MemUsage MemLimit
   &lt;chr&gt;     &lt;chr&gt; &lt;chr&gt;   &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;   
-1 hexmake   hexm… 7615…    0.06 113.8MiB 6.791GiB
+1 hexmake   hexm… 8294…    0.05 113.6MiB 6.791GiB
 # … with 8 more variables: MemPerc &lt;dbl&gt;, NetI &lt;chr&gt;,
 #   NetO &lt;chr&gt;, BlockI &lt;chr&gt;, BlockO &lt;chr&gt;,
 #   PIDs &lt;int&gt;, record_time &lt;chr&gt;, extra &lt;chr&gt;</code></pre>
@@ -1480,7 +1480,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["engineering-production-grade-shiny-apps.pdf"],
+"download": null,
 "toc": {
 "collapse": "section"
 }
